fixed the calculation of the timer differnce and add working on DOM manipulation for the extension

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,12 @@
     "48": "icon.png",
     "128": "icon.png"
   },
+  "content_scripts": [
+    {
+      "js": ["mainScript.js"],
+      "matches": ["*"]
+    }
+  ],
   "action": {
     "default_popup": "main.html",
     "default_icons": {
