fixed the js name in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   },
   "content_scripts": [
     {
-      "js": ["mainScript.js"],
+      "js": ["domManipulation.js"],
       "matches": ["*"]
     }
   ],
